--- a/Rick and Morty Soundboard/Rick and Morty Soundboard/Base.lproj/Main.storyboard
+++ b/Rick and Morty Soundboard/Rick and Morty Soundboard/Base.lproj/Main.storyboard
@@ -1,14 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Rick_and_Morty_Soundboard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +22,143 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKs-3N-Qeu" userLabel="Background">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eating title" translatesAutoresizingMaskIntoConstraints="NO" id="edj-dB-3ff" userLabel="Image">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    </imageView>
+                                    <visualEffectView opaque="NO" alpha="0.97999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="emf-OB-mjM" userLabel="Blur">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="SlK-g1-asy">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        </view>
+                                        <blurEffect style="light"/>
+                                    </visualEffectView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="edj-dB-3ff" firstAttribute="leading" secondItem="IKs-3N-Qeu" secondAttribute="leading" id="5ok-Pg-k0I"/>
+                                    <constraint firstItem="edj-dB-3ff" firstAttribute="height" secondItem="IKs-3N-Qeu" secondAttribute="height" id="Ond-cz-ZkJ"/>
+                                    <constraint firstItem="emf-OB-mjM" firstAttribute="height" secondItem="edj-dB-3ff" secondAttribute="height" id="QIF-Js-msB"/>
+                                    <constraint firstItem="emf-OB-mjM" firstAttribute="width" secondItem="edj-dB-3ff" secondAttribute="width" id="QJ1-dJ-1ja"/>
+                                    <constraint firstItem="emf-OB-mjM" firstAttribute="centerX" secondItem="edj-dB-3ff" secondAttribute="centerX" id="VJ7-LZ-zfl"/>
+                                    <constraint firstItem="edj-dB-3ff" firstAttribute="top" secondItem="IKs-3N-Qeu" secondAttribute="top" id="Ymj-ni-EXn"/>
+                                    <constraint firstItem="edj-dB-3ff" firstAttribute="width" secondItem="IKs-3N-Qeu" secondAttribute="width" id="cze-JA-b8R"/>
+                                    <constraint firstItem="emf-OB-mjM" firstAttribute="centerY" secondItem="edj-dB-3ff" secondAttribute="centerY" id="eoE-RA-0mE"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="phf-vD-Y9v">
+                                <rect key="frame" x="0.0" y="90" width="375" height="477"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kMY-eJ-7GT">
+                                    <size key="itemSize" width="66" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TrackCollectionViewCell" id="W2J-bY-xL8" customClass="TrackCollectionViewCell" customModule="Rick_and_Morty_Soundboard" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="75" height="110"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="75" height="110"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="DYd-yb-jvl" userLabel="Track Button">
+                                                    <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="DYd-yb-jvl" secondAttribute="height" multiplier="1:1" id="C58-ej-pSe"/>
+                                                    </constraints>
+                                                    <state key="normal" image="rick"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wabba dubba dub dub" textAlignment="center" lineBreakMode="characterWrap" numberOfLines="4" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uu4-5P-gbg">
+                                                    <rect key="frame" x="0.0" y="75" width="75" height="35"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="uu4-5P-gbg" firstAttribute="leading" secondItem="W2J-bY-xL8" secondAttribute="leading" id="0dB-qE-82U"/>
+                                            <constraint firstAttribute="trailing" secondItem="uu4-5P-gbg" secondAttribute="trailing" id="IEk-q9-rKk"/>
+                                            <constraint firstAttribute="bottom" secondItem="uu4-5P-gbg" secondAttribute="bottom" id="K7B-09-XCV"/>
+                                            <constraint firstAttribute="trailing" secondItem="DYd-yb-jvl" secondAttribute="trailing" id="MQO-5S-Iq1"/>
+                                            <constraint firstItem="DYd-yb-jvl" firstAttribute="top" secondItem="W2J-bY-xL8" secondAttribute="top" id="WpC-d2-Pj1"/>
+                                            <constraint firstItem="uu4-5P-gbg" firstAttribute="top" secondItem="DYd-yb-jvl" secondAttribute="bottom" id="drm-GU-I4i"/>
+                                            <constraint firstItem="DYd-yb-jvl" firstAttribute="leading" secondItem="W2J-bY-xL8" secondAttribute="leading" id="mAy-fe-iby"/>
+                                        </constraints>
+                                        <size key="customSize" width="75" height="110"/>
+                                        <connections>
+                                            <outlet property="trackButton" destination="DYd-yb-jvl" id="rEC-YO-GyU"/>
+                                            <outlet property="trackNameLabel" destination="uu4-5P-gbg" id="5Gy-FG-QgS"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="nyZ-h8-FLx"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="OlB-7y-2AB"/>
+                                    <outlet property="prefetchDataSource" destination="BYZ-38-t0r" id="sFH-OZ-j0u"/>
+                                </connections>
+                            </collectionView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qdd-Ni-j4N" userLabel="Top bar stack">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hIr-1k-6Z8" userLabel="Top image">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="spT-N3-FCJ"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="akV-7u-GSC" userLabel="Favourites stack">
+                                <rect key="frame" x="0.0" y="567" width="375" height="100"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8DZ-NE-czS" userLabel="Bottom image">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                        <color key="backgroundColor" red="0.74901962280000001" green="0.21176470820000001" blue="0.047058824450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="YJO-BO-hki"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="phf-vD-Y9v" secondAttribute="trailing" id="4jY-8I-thE"/>
+                            <constraint firstItem="akV-7u-GSC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8kf-ku-kAM"/>
+                            <constraint firstItem="IKs-3N-Qeu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="NCR-07-2o3"/>
+                            <constraint firstItem="Qdd-Ni-j4N" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Tys-67-Y2p"/>
+                            <constraint firstAttribute="trailing" secondItem="Qdd-Ni-j4N" secondAttribute="trailing" id="V7L-Li-Vsg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="IKs-3N-Qeu" secondAttribute="bottom" id="VI6-EL-xfO"/>
+                            <constraint firstItem="phf-vD-Y9v" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VgQ-cc-64n"/>
+                            <constraint firstItem="IKs-3N-Qeu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="bJ0-Pg-4gN"/>
+                            <constraint firstAttribute="trailing" secondItem="akV-7u-GSC" secondAttribute="trailing" id="cug-N4-6GB"/>
+                            <constraint firstItem="phf-vD-Y9v" firstAttribute="top" secondItem="Qdd-Ni-j4N" secondAttribute="bottom" constant="20" id="dss-cu-e45"/>
+                            <constraint firstItem="akV-7u-GSC" firstAttribute="top" secondItem="phf-vD-Y9v" secondAttribute="bottom" id="e0m-xV-PaG"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IKs-3N-Qeu" secondAttribute="trailing" constant="-16" id="nSr-W6-nKd"/>
+                            <constraint firstItem="Qdd-Ni-j4N" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="roh-5F-0tR"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="akV-7u-GSC" secondAttribute="bottom" id="tFh-R5-ids"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="phf-vD-Y9v" id="6qg-lz-DcT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="eating title" width="640" height="1136"/>
+        <image name="rick" width="250" height="318"/>
+    </resources>
 </document>
