--- a/Rick and Morty Soundboard/Rick and Morty Soundboard/Base.lproj/Main.storyboard
+++ b/Rick and Morty Soundboard/Rick and Morty Soundboard/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKs-3N-Qeu" userLabel="Background">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eating title" translatesAutoresizingMaskIntoConstraints="NO" id="edj-dB-3ff" userLabel="Image">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eating title_wallpaper" translatesAutoresizingMaskIntoConstraints="NO" id="edj-dB-3ff" userLabel="Image">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                     </imageView>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ERp-Bm-usi">
@@ -159,6 +159,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="eating title" width="640" height="1136"/>
+        <image name="eating title_wallpaper" width="640" height="1136"/>
     </resources>
 </document>
